# hubuum

./: .dockerignore  .env.docker.local  .env.docker.local.example  .env.example  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  Cross.toml  Dockerfile  LICENSE  README.md  claude.md  cleanup_test_databases.sh  docker-compose.yml  entrypoint.sh  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements-test.txt  requirements.txt  run_tests.sh  tox.ini
.github/workflows/: benchmarks.yml  ci.yml  codeql.yml  deploy-documentation.yml  docker.yml  publish-to-pypi.yml  release.yml  tox.yml
benches/: database_url_parsing_criterion.rs  json_sql_filters_callgrind.rs  jsonb_type_inference_callgrind.rs  namespace_roundtrip_criterion.rs  object_validation_geo_callgrind.rs  object_validation_nested_callgrind.rs  parse_integer_list_callgrind.rs  parse_query_parameter_callgrind.rs  password_hashing_criterion.rs  permissions_parsing_callgrind.rs  request_hash_callgrind.rs  search_operator_parsing_callgrind.rs  token_storage_hash_callgrind.rs  unified_search_cursor_callgrind.rs  unified_search_query_parsing_callgrind.rs
benches/postgres/: storage_postgres_criterion.rs
crates/hubuum-auth-core/: Cargo.toml
crates/hubuum-auth-ldap/: Cargo.toml
crates/hubuum-auth-ldap/src/: lib.rs
crates/hubuum-computed-fields/: Cargo.toml
crates/hubuum-computed-fields/src/: lib.rs
crates/hubuum-event-sink-amqp/: Cargo.toml
crates/hubuum-event-sink-amqp/src/: lib.rs
crates/hubuum-event-sink-email/: Cargo.toml
crates/hubuum-event-sink-email/src/: lib.rs
crates/hubuum-event-sink-valkey/: Cargo.toml
crates/hubuum-event-sink-valkey/src/: lib.rs
crates/hubuum-event-sink-webhook/: Cargo.toml
crates/hubuum-event-sink-webhook/src/: lib.rs
crates/hubuum-event-sinks-common/: Cargo.toml
crates/hubuum-event-sinks-common/src/: lib.rs
crates/hubuum-events-core/: Cargo.toml
crates/hubuum-events-core/src/: lib.rs
crates/hubuum-outbound-http/: Cargo.toml
crates/hubuum-outbound-http/src/: lib.rs
crates/hubuum-query/: Cargo.toml
crates/hubuum-query/benches/: jsonb_type_inference_callgrind.rs  parse_integer_list_callgrind.rs  parse_query_parameter_callgrind.rs  search_operator_parsing_callgrind.rs
crates/hubuum-query/src/: lib.rs
crates/hubuum-task-core/: Cargo.toml
crates/hubuum-templates/: Cargo.toml
crates/hubuum-templates/benches/: size_limited_writer_callgrind.rs
crates/hubuum-templates/src/: lib.rs
docker/postgres/: Dockerfile
docs/: about.md  api.md  auth_model.md  background_workers.md  backup-restore.md  code-style.md  collection_hierarchy.md  computed_fields.md  configuration.md  contributing.md  deployment.md  development.md  distributed_deployment.md  events.md  export_api.md  export_template_guide.md  external_auth.md  hubuum-api-v1.json  import_api.md  index.md  installation.md  logging.md  login_rate_limiting.md  metrics.md  model.md  name_addressing.md  object_data_json_patch.md  openapi.json  performance.md  permissions.md  query_support_matrix.md  querying.md  quick_start.md  relationship_endpoints.md  releasing.md  remote_targets.md  report_api.md  search_api.md  task_api.md  task_system.md  (+5 more)
docs/treetop/: README.md  bootstrap.cedar  schema.cedarschema  test-fixture.md
hooks/: pre-commit
load-tests/: pool.js
migrations/2023-12-27-011440_initial/: down.sql  up.sql
migrations/2026-03-05-140000_drop_closure_views/: down.sql  up.sql
migrations/2026-03-06-120000_report_templates/: down.sql  up.sql
migrations/2026-03-07-000001_tasks_and_imports/: down.sql  up.sql
migrations/2026-06-22-000001_remote_targets/: down.sql  up.sql
migrations/2026-06-29-000000_event_audit_subsystem/: down.sql  up.sql
migrations/2026-06-29-000000_events_table/: down.sql  up.sql
migrations/2026-06-29-000001_consolidate_task_events/: down.sql  up.sql
migrations/2026-06-29-000001_temporal_history/: down.sql  up.sql
migrations/2026-06-29-000002_user_anonymized_at/: down.sql  up.sql
migrations/2026-06-30-000000_add_read_audit_permission/: down.sql  up.sql
migrations/2026-06-30-000001_event_sinks_subscriptions/: down.sql  up.sql
migrations/2026-06-30-000002_event_deliveries_fanout/: down.sql  up.sql
migrations/2026-07-05-000000_rename_namespaces_to_collections/: down.sql  up.sql
migrations/2026-07-13-000001_task_worker_leases/: down.sql  up.sql
migrations/2026-07-13-000002_backup_restore/: down.sql  up.sql
migrations/2026-07-14-000001_preserve_imported_timestamps/: down.sql  up.sql
migrations/2026-07-15-000001_task_active_capacity_index/: down.sql  up.sql
migrations/2026-07-15-000002_event_related_collections/: down.sql  up.sql
migrations/2026-07-15-000003_computed_fields/: down.sql  up.sql
migrations/2026-07-18-000001_computed_field_sorting/: down.sql  up.sql
migrations/2026-07-21-000001_event_retention_coordination/: down.sql  up.sql
migrations/2026-07-22-000001_token_resource_scopes/: down.sql  metadata.toml  up.sql
scripts/: check-container-build.sh  check-criterion-regressions.sh  check-criterion-stability.sh  check-release-readiness.sh  check-version-bump.sh  extract-changelog-section.sh  install-backend.sh  install-single-host.sh  release.sh  single-host-rollout.sh  stop-single-host.sh  test-install-script-refresh.sh  test-single-host-rollout.sh  test-single-host-zero-downtime.sh  uninstall-single-host.sh  update-single-host.sh
src/: .env  auth.rs  config.rs  container_build.rs  errors.rs  extractors_path.rs  lib.rs  lifecycle.rs  logger.rs  macros.rs  main.rs  schema.rs  test_support.rs  tls.rs
src/api/: locations.rs  mod.rs  openapi.rs  response.rs
src/auth/: mod.rs
src/backups/: mod.rs
src/config/: client_network.rs  defaults.rs  environment.rs  running.rs  tls_backend.rs  token_hash.rs
src/db/: connection.rs  json.rs  mod.rs  query_capture.rs  token.rs
src/events/: amqp.rs  context.rs  db.rs  delivery.rs  email.rs  fanout.rs  mod.rs  model.rs  pg_notify.rs  retention.rs  (+4 more)
tests/: admin_cli.rs  api_core_data.rs  api_identity.rs  api_jobs.rs  api_platform.rs  binary_smoke.rs  restore_roundtrip.rs
(+384 files in other folders)
