[package]
name = "hubuum"
version = "0.0.1"
edition = "2024"
description = "Flexible asset management REST service."
license = "MIT"
readme = "README.md"
repository = "https://github.com/hubuum/hubuum"
homepage = "https://github.com/hubuum/hubuum"
documentation = "https://github.com/hubuum/hubuum"
keywords = ["asset-management", "cmdb", "rest", "api"]
categories = ["web-programming::http-server"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["crates/hubuum-outbound-http", "crates/hubuum-templates", "crates/hubuum-events-core"]

[dependencies]
actix-rt = "2"
actix-service = "2"
actix-web = { version = "4" }
actix-http = { version = "3" }
argon2 = "0.6.0-rc.8"
bytes = "1"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["env", "derive"] }
diesel = { version = "2", features = [
    "postgres",
    "serde_json",
    "r2d2",
    "chrono",
    "64-column-tables",
    "uuid",
] }
ipnet = "2.12"
futures = "0.3"
futures-util = "0.3"
jsonschema = "0"
r2d2 = "0.8"
rand = "0.10"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.11"
hmac = "0.13"
hubuum-outbound-http = { path = "crates/hubuum-outbound-http" }
hubuum-templates = { path = "crates/hubuum-templates" }
hubuum-events-core = { path = "crates/hubuum-events-core" }
minijinja = { version = "2", features = ["loader", "fuel"] }
tokio = { version = "1", features = ["sync", "macros", "rt-multi-thread", "net", "io-util"] }
tracing = "0.1"
tracing-serde = "0"
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "chrono",
    "json",
] }
utoipa = { version = "5", features = ["actix_extras", "chrono"] }
utoipa-swagger-ui = { version = "9", features = [
    "actix-web",
    "vendored",
], optional = true }
urlparse = "0.7"
uuid = { version = "1", features = ["v4", "serde"] }
percent-encoding = "2"
rustls = { version = "0.23", features = ["aws-lc-rs", "ring"], optional = true }
openssl = { version = "0.10.80", optional = true }
lru = "0.18.0"

[dev-dependencies]
criterion = "0.8.2"
iai-callgrind = "0.16.1"
regex = "1"
rstest = "0.26"
tokio-rustls = "0.26"

[features]
default = ["swagger-ui"]
swagger-ui = ["dep:utoipa-swagger-ui"]
tls-rustls = ["dep:rustls", "actix-web/rustls-0_23"]
tls-openssl = ["dep:openssl", "actix-web/openssl"]

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = "z"

[lib]
name = "hubuum"
path = "src/lib.rs"
test = false


[[bin]]
name = "hubuum-server"
path = "src/main.rs"

[[bin]]
name = "hubuum-admin"
path = "src/bin/admin.rs"
test = false

[[bin]]
name = "hubuum-openapi"
path = "src/bin/openapi.rs"
test = false

[[bench]]
name = "parse_query_parameter_callgrind"
harness = false

[[bench]]
name = "parse_integer_list_callgrind"
harness = false

[[bench]]
name = "json_sql_filters_callgrind"
harness = false

[[bench]]
name = "database_url_parsing_criterion"
harness = false

[[bench]]
name = "object_validation_geo_callgrind"
harness = false

[[bench]]
name = "object_validation_nested_callgrind"
harness = false

[[bench]]
name = "search_operator_parsing_callgrind"
harness = false

[[bench]]
name = "permissions_parsing_callgrind"
harness = false

[[bench]]
name = "jsonb_type_inference_callgrind"
harness = false

[[bench]]
name = "token_storage_hash_callgrind"
harness = false

[[bench]]
name = "request_hash_callgrind"
harness = false

[[bench]]
name = "unified_search_query_parsing_callgrind"
harness = false

[[bench]]
name = "unified_search_cursor_callgrind"
harness = false

[[bench]]
name = "password_hashing_criterion"
harness = false
