[package]
name = "hubuum"
version = "0.0.1"
edition = "2024"
description = "Flexible asset management REST service."
license = "MIT"
readme = "README.md"
repository = "https://github.com/hubuum/hubuum"
homepage = "https://github.com/hubuum/hubuum"
documentation = "https://github.com/hubuum/hubuum"
keywords = ["asset-management", "cmdb", "rest", "api"]
categories = ["web-programming::http-server"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "crates/hubuum-auth-core",
    "crates/hubuum-auth-ldap",
    "crates/hubuum-event-sink-amqp",
    "crates/hubuum-event-sink-email",
    "crates/hubuum-event-sink-valkey",
    "crates/hubuum-event-sink-webhook",
    "crates/hubuum-event-sinks-common",
    "crates/hubuum-events-core",
    "crates/hubuum-outbound-http",
    "crates/hubuum-query",
    "crates/hubuum-templates",
]

[dependencies]
actix-rt = "2"
actix-service = "2"
actix-web = { version = "4" }
actix-http = { version = "3" }
argon2 = "0.6.0-rc.8"
async-trait = "0.1"
bytes = "1"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["env", "derive"] }
diesel = { version = "2", features = [
    "postgres",
    "serde_json",
    "chrono",
    "64-column-tables",
    "uuid",
] }
diesel-async = { version = "0.9.2", features = ["postgres", "bb8"] }
diesel_migrations = { version = "2.3.2", optional = true }
pq-sys = { version = "0.7.5", optional = true }
ipnet = "2.12"
futures = "0.3"
futures-util = "0.3"
jsonschema = { version = "0", default-features = false }
rand = "0.10"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
redis = { version = "1.3.0", default-features = false, features = ["connection-manager", "tokio-rustls-comp"], optional = true }
rustls-platform-verifier = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.11"
hmac = "0.13"
hubuum-auth-core = { path = "crates/hubuum-auth-core" }
hubuum-auth-ldap = { path = "crates/hubuum-auth-ldap" }
hubuum-event-sink-amqp = { path = "crates/hubuum-event-sink-amqp", optional = true }
hubuum-event-sink-email = { path = "crates/hubuum-event-sink-email", optional = true }
hubuum-event-sink-valkey = { path = "crates/hubuum-event-sink-valkey", optional = true }
hubuum-event-sink-webhook = { path = "crates/hubuum-event-sink-webhook" }
hubuum-event-sinks-common = { path = "crates/hubuum-event-sinks-common" }
hubuum-templates = { path = "crates/hubuum-templates" }
hubuum-events-core = { path = "crates/hubuum-events-core", features = ["schema"] }
hubuum-outbound-http = { path = "crates/hubuum-outbound-http" }
hubuum-query = { path = "crates/hubuum-query" }
minijinja = { version = "2", features = ["loader", "fuel"] }
opentelemetry = { version = "0.32", default-features = false, features = ["metrics"] }
opentelemetry-prometheus = "0.32"
opentelemetry_sdk = { version = "0.32", default-features = false, features = ["metrics"] }
tokio = { version = "1", features = ["sync", "macros", "rt-multi-thread", "net", "io-util", "signal"] }
tokio-postgres = "0.7"
tokio-postgres-rustls = "0.13"
tracing = "0.1"
tracing-serde = "0"
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "chrono",
    "json",
] }
utoipa = { version = "5", features = ["actix_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { version = "9", features = [
    "actix-web",
    "vendored",
], optional = true }
urlparse = "0.7"
uuid = { version = "1", features = ["v4", "serde"] }
percent-encoding = "2"
rustls = { version = "0.23", features = ["aws-lc-rs", "ring"] }
prometheus = "0.14"
openssl = { version = "0.10.80", optional = true }
lru = "0.18.0"
# treetop-client is currently consumed from git at version 0.0.1. Cargo.lock
# pins the exact revision; bump explicitly when the upstream API stabilizes.
treetop-client = { git = "https://github.com/terjekv/treetop-client", optional = true }
toml = "0.9"

[dev-dependencies]
criterion = "0.8.2"
iai-callgrind = "0.16.1"
regex = "1"
rstest = "0.26"
tokio-rustls = "0.26"

[features]
default = ["swagger-ui", "login-rate-limit-valkey"]
amqp = ["dep:hubuum-event-sink-amqp"]
email = ["dep:hubuum-event-sink-email"]
swagger-ui = ["dep:utoipa-swagger-ui"]
tls-rustls = ["actix-web/rustls-0_23"]
tls-openssl = ["dep:openssl", "actix-web/openssl"]
login-rate-limit-valkey = ["dep:redis"]
valkey = ["dep:hubuum-event-sink-valkey", "login-rate-limit-valkey"]
permissions-treetop = ["dep:treetop-client"]
embedded-migrations = ["dep:diesel_migrations", "pq-sys/bundled"]
vendored-openssl = ["openssl/vendored"]
# Test/diagnostic-only Diesel instrumentation used by PostgreSQL query-budget
# checks. Keeping this opt-in avoids adding instrumentation work to production
# pool checkouts.
query-capture = []
# Enables the opt-in PostgreSQL Criterion target. It remains separate from the
# self-contained benchmark fan-out because it needs a migrated database.
postgres-bench = []

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = "z"

[lib]
name = "hubuum"
path = "src/lib.rs"


[[bin]]
name = "hubuum-server"
path = "src/main.rs"

[[bin]]
name = "hubuum-admin"
path = "src/bin/admin.rs"
test = false

[[bin]]
name = "hubuum-openapi"
path = "src/bin/openapi.rs"
test = false

[[bench]]
name = "json_sql_filters_callgrind"
harness = false

[[bench]]
name = "database_url_parsing_criterion"
harness = false

[[bench]]
name = "object_validation_geo_callgrind"
harness = false

[[bench]]
name = "object_validation_nested_callgrind"
harness = false

[[bench]]
name = "permissions_parsing_callgrind"
harness = false

[[bench]]
name = "token_storage_hash_callgrind"
harness = false

[[bench]]
name = "request_hash_callgrind"
harness = false

[[bench]]
name = "unified_search_query_parsing_callgrind"
harness = false

[[bench]]
name = "unified_search_cursor_callgrind"
harness = false

[[bench]]
name = "password_hashing_criterion"
harness = false

[[bench]]
name = "storage_postgres_criterion"
path = "benches/postgres/storage_postgres_criterion.rs"
harness = false
required-features = ["postgres-bench"]
