[package]
name = "hubuum-event-sink-email"
version = "0.0.1"
edition = "2024"
description = "Email event sink transport for Hubuum."
license = "MIT"
repository = "https://github.com/hubuum/hubuum"

[dependencies]
futures = "0.3"
hubuum-event-sinks-common = { path = "../hubuum-event-sinks-common" }
hubuum-events-core = { path = "../hubuum-events-core" }
hubuum-templates = { path = "../hubuum-templates" }
lettre = { version = "0.11.22", default-features = false, features = [
    "builder",
    "hostname",
    "pool",
    "smtp-transport",
    "tokio1-rustls-tls",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
