[package]
name = "hubuum-event-sink-webhook"
version = "0.0.1"
edition = "2024"
description = "Webhook event sink transport for Hubuum."
license = "MIT"
repository = "https://github.com/hubuum/hubuum"

[dependencies]
futures = "0.3"
hubuum-event-sinks-common = { path = "../hubuum-event-sinks-common" }
hubuum-events-core = { path = "../hubuum-events-core" }
hubuum-outbound-http = { path = "../hubuum-outbound-http" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"

[dev-dependencies]
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["io-util", "macros", "net", "rt-multi-thread", "sync"] }
tokio-rustls = "0.26"
uuid = { version = "1", features = ["v4", "serde"] }
