[package]
name = "hubuum-event-sinks-common"
version = "0.0.1"
edition = "2024"
description = "Transport-neutral event sink helpers for Hubuum."
license = "MIT"
repository = "https://github.com/hubuum/hubuum"

[dependencies]
hubuum-events-core = { path = "../hubuum-events-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["sync"] }
