[package]
name = "hubuum-events-core"
version = "0.0.1"
edition = "2024"
description = "Backend-agnostic event catalog and provenance types for Hubuum's unified event & audit stream."
license = "MIT"
repository = "https://github.com/hubuum/hubuum"

[dependencies]
serde = { version = "1", features = ["derive"] }
uuid = { version = "1", features = ["serde"] }
