[package]
name = "hubuum-events-core"
version = "0.0.1"
edition = "2024"
description = "Backend-agnostic event catalog and provenance types for Hubuum's unified event & audit stream."
license = "MIT"
repository = "https://github.com/hubuum/hubuum"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
percent-encoding = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["serde"] }
