[package]
name = "hubuum-outbound-http"
version = "0.0.1"
edition = "2024"
description = "Hardened outbound HTTP helpers for Hubuum."
license = "MIT"
repository = "https://github.com/hubuum/hubuum"

[dependencies]
ipnet = "2.12"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
serde_json = "1"
tokio = { version = "1", features = ["net"] }
