[package]
name = "hubuum-templates"
version = "0.0.1"
edition = "2024"
description = "Bounded MiniJinja template helpers for Hubuum."
license = "MIT"
repository = "https://github.com/hubuum/hubuum"

[dependencies]
chrono = "0.4"
minijinja = { version = "2", features = ["fuel"] }
serde_json = "1"

[dev-dependencies]
iai-callgrind = "0.16.1"

[[bench]]
name = "size_limited_writer_callgrind"
harness = false
